@@ -51,7 +51,7 @@ Written by Matthias Blume.
 
 COPYING
 -------
-Copyright (C) 2014 The Fellowship of SML/NJ
+Copyright (C) 2017 The Fellowship of SML/NJ
 
 This is free software; see the source for copying  conditions.   There  is  NO
 warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
