@@ -56,7 +56,7 @@ AUTHOR
 
 COPYING
 -------
-Copyright (C) 2014 The Fellowship of SML/NJ
+Copyright (C) 2017 The Fellowship of SML/NJ
 
 This is free software; see the source for copying  conditions.   There  is  NO
 warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
